; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_registry.c_msi_reg_set_val_multi_str.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_registry.c_msi_reg_set_val_multi_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_MULTI_SZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @msi_reg_set_val_multi_str(i32 %0, i64* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load i64*, i64** %6, align 8
  store i64* %8, i64** %7, align 8
  br label %9

9:                                                ; preds = %13, %3
  %10 = load i64*, i64** %7, align 8
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %9
  %14 = load i64*, i64** %7, align 8
  %15 = call i64 @lstrlenW(i64* %14)
  %16 = add nsw i64 %15, 1
  %17 = load i64*, i64** %7, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 %16
  store i64* %18, i64** %7, align 8
  br label %9

19:                                               ; preds = %9
  %20 = load i32, i32* %4, align 4
  %21 = load i64*, i64** %5, align 8
  %22 = load i32, i32* @REG_MULTI_SZ, align 4
  %23 = load i64*, i64** %6, align 8
  %24 = bitcast i64* %23 to i32*
  %25 = load i64*, i64** %7, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 1
  %27 = load i64*, i64** %6, align 8
  %28 = ptrtoint i64* %26 to i64
  %29 = ptrtoint i64* %27 to i64
  %30 = sub i64 %28, %29
  %31 = sdiv exact i64 %30, 8
  %32 = mul i64 %31, 4
  %33 = trunc i64 %32 to i32
  %34 = call i32 @RegSetValueExW(i32 %20, i64* %21, i32 0, i32 %22, i32* %24, i32 %33)
  ret i32 %34
}

declare dso_local i64 @lstrlenW(i64*) #1

declare dso_local i32 @RegSetValueExW(i32, i64*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
